Fix checkbox alignment by adjusting margin properties for consistency

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -30,7 +30,7 @@
 input[type="checkbox"] {
   width: 20px;
   height: 20px;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .input-field {
@@ -40,7 +40,7 @@ input[type="checkbox"] {
 }
 
 .input-field label {
-  margin-left: 5px;
+  margin-right: 5px;
   position: relative !important;
 }
 
